<resources>
    <string name="app_name">Game</string>
    <string name="logoDescription">GameName</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="play_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="auth_fragment_label">Auth Fragment</string>

    <string name="hello_first_fragment">Game</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Menu elements -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menu_map">Play</string>
    <string name="menu_auth">LogIn/LogOut</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map_marat">Map</string>

    <string name="menu_back">Back</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Map elements -->

    <string name="play_info">Playing…</string>

    <!-- Settings elements -->

    <string name="settings_info">Settings…</string>

    <!-- Auth elements -->

    <string name="auth_info">Logging…</string>
    <string name="Forward">Forward</string>
    <string name="fighting">Fighting</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="totem">Totem</string>
    <string name="noText">notext</string>
    <string name="close">Close</string>
    <string name="buy">Sacrifice</string>
    <string name="heal">Heal</string>
    <string name="fight">Fight</string>
    <string name="_0_0">0/0</string>
    <string name="exit">Exit</string>
    <string name="currentId">CurrentID</string>
    <string name="player">Player</string>
    <string name="inventory">Inventory</string>
    <string name="respawn_enemies">Respawn enemies</string>
    <string name="get_all_possible_items">Get all possible items</string>
    <string name="set_health_to_3000">Set health to…</string>
    <string name="need_to_sacrifice">Need to Sacrifice</string>
    <string name="possible_drop">Possible drop</string>
    <string name="dungeon">Monster dungeon</string>
    <string name="drop_item">Drop Item</string>
    <string name="nz">NZ</string>
    <string name="load_items">Load items</string>
    <string name="you_haven_t_enough_items">You haven\'t enough items</string>
    <string name="back">Back</string>
    <string name="objects">Objects</string>
    <string name="magic">Magic</string>
    <string name="nature_attack">Nature attack</string>
    <string name="waepon">Weapon</string>
    <string name="physical_attack">Physical attack</string>
    <string name="attack">Attack</string>
    <string name="equipment">Equipment</string>
    <string name="unequip_item">Unequip item</string>
    <string name="background">background</string>
    <string name="description">Description</string>


</resources>