<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainFragment">

    <TextView
        android:id="@+id/gameName"
        android:text="@string/logoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menuPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menuAuth"
        app:layout_constraintStart_toStartOf="@+id/menuAuth"
        app:layout_constraintTop_toBottomOf="@id/gameName"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/menuAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuPlay" />

    <Button
        android:id="@+id/menuSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu_settings"
        app:layout_constraintEnd_toEndOf="@+id/menuAuth"
        app:layout_constraintStart_toStartOf="@+id/menuAuth"
        app:layout_constraintTop_toBottomOf="@+id/menuAuth" />
</androidx.constraintlayout.widget.ConstraintLayout>