<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="-50dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:text="@string/noText"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="start"
                android:layout_gravity="start"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player" />

            <TextView
                android:id="@+id/healthText"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/noText" />
            </LinearLayout>

            <TextView
                android:id="@+id/inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:text="@string/inventory"
                android:textSize="20sp" />
            <GridLayout
                android:id="@+id/inventoryLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:columnCount="3"
                android:foregroundGravity="center"
                android:rowCount="4" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/noText" />

            <Button
                android:id="@+id/ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/heal" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/closePlayerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/close"
            android:focusable="true"
            android:src="@drawable/close"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

</LinearLayout>


