<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/totemLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="-50dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:textSize="25sp"
                android:layout_gravity="start"
                android:text="@string/noText" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="start"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/totem" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/descriptionHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/description" />


                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noText" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="end"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/heart_outline" />

                        <TextView
                            android:id="@+id/heart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/sword" />

                        <TextView
                            android:id="@+id/damage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/airballoon_outline" />
                        <TextView
                            android:id="@+id/damageA"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/water" />
                        <TextView
                            android:id="@+id/damageW"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/fire" />
                        <TextView
                            android:id="@+id/damageF"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/earth" />
                        <TextView
                            android:id="@+id/damageE"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/shield" />
                        <TextView
                            android:id="@+id/defence"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/airballoon_outline" />
                        <TextView
                            android:id="@+id/defenceA"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/water" />
                        <TextView
                            android:id="@+id/defenceW"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/fire" />
                        <TextView
                            android:id="@+id/defenceF"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/earth" />
                        <TextView
                            android:id="@+id/defenceE"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:text="@string/noText" />
                    </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="start"
                android:layout_marginBottom="0dp"
                android:text="@string/need_to_sacrifice"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/sItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/no_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_haven_t_enough_items" />

            <Button
                android:id="@+id/sacrifice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/buy"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/closeDialogTotem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/close"
            android:focusable="true"
            android:src="@drawable/close"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

</LinearLayout>


